Fixed bug #38274 (Memlimit fatal error sent to "wrong" stderr when using fastcgi)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@224324 c90b9560-bf6c-de11-be94-00142212c4b1